4_2_alb/5_instance.tf
resource "aws_security_group_rule" "st8_ex_http_SG" {
    # 8080~8085 포트 범위에서 TCP 프로토콜로 인바운드 트래픽 허용
    type = "ingress"
    from_port = 8080
    to_port = 8085
    protocol = "tcp"
    
    # 위 규칙을 http 보안 그룹에 적용
    security_group_id = data.aws_security_group.st8_ex_http_SG.id
    # 위 규칙의 소스는 ALB 보안 그룹에서만 허용
    source_security_group_id = data.aws_security_group.st8_ex_alb_SG.id
}

# 첫번째 존의 private subnet에 인스턴스 생성하기
resource "aws_instance" "st8_alb_instance" {
    ami = "ami-0aa31b568c1e8d622" # Amazon Linux 2 AMI
    instance_type = "t3.micro"

    key_name = "st8_terraform_test_key" # SSH 키 페어

    subnet_id = data.aws_subnets.st8_ex_private_subnets.ids[0] # 첫 번째 프라이빗 서브넷에 인스턴스 생성
    associate_public_ip_address = false # 퍼블릭 IP 비활성화 (프라이빗 서브넷이므로)

    # 스토리지 설정: 루트 볼륨
    root_block_device {
        volume_size = 10 # 루트 볼륨 크기 (GB)
        volume_type = "gp3" # 볼륨 유형 (gp3: 범용 SSD)
        delete_on_termination = true # 인스턴스 종료 시 볼륨 삭제 여부
    }

    # 보안 그룹 설정: SSH와 HTTP 트래픽 허용
    vpc_security_group_ids = [
        data.aws_security_group.st8_ex_http_SG.id,
        data.aws_security_group.st8_ex_ssh-SG.id
    ]

    # User Data 설정
    # ${path.module}: 현재 테라폼 모듈의 경로를 나타내는 변수.
    user_data = file("${path.module}/user-data.sh") 
    user_data_replace_on_change = true # user_data 변경 시 인스턴스 자동 재생성

    tags = { Name = "st8_alb_instance" }
}

# SSH 키 페어 생성
resource "aws_key_pair" "st8_terraform_test_key" {
    key_name = "st8_terraform_test_key" # 키 페어 이름
    public_key = file("C:/Users/user/.ssh/st8_terraform_test_key.pub")
}
